--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,6 +7,9 @@
     "dev": "node index.js --watch"
   },
   "dependencies": {
+    "@graphql-tools/graphql-file-loader": "^7.5.16",
+    "@graphql-tools/load": "^7.8.12",
+    "@graphql-tools/schema": "^9.0.16",
     "apollo-server": "^3.11.1",
     "graphql": "^16.6.0"
   }
